%% title: ERD 04b1 - Change Request / Design Review
%% Module: SIC Requirement / Analysis / Design (part 1 of 2, see erd-04b2-trace-comment.mmd for Traceability/Comment)
%% NOTE: All entities extend BaseEntity or BaseBusinessEntity (Lombok @Data), which contribute these audit/base
%%       columns not repeated per-entity below: id (PK, UUID), created_by, created_date, updated_by, updated_date,
%%       is_delete, delete_by, delete_date, rowVersion (xmin). BaseBusinessEntity additionally adds business_id (UUID).
%%       Only business-specific columns are listed in each entity box.
%% NOTE on PmDesignReview / PmCrAssignee / PmEditSession:
%%       these use POLYMORPHIC association pairs (a "*_type" string column + a "*_id" UUID column) instead of a
%%       real FK to one table, so the same column pair can point at multiple possible target tables depending on
%%       the value of *_type. Mermaid cannot express "one column set, many possible target tables" as a real FK,
%%       so no dashed polymorphic relationship lines are drawn here (see erd-04b2-trace-comment.mmd for the
%%       polymorphic PmTraceLink relationships, which are the documented example of this pattern).
%% NOTE: Relationships marked "(inferred)" come from a plain *_id UUID column with FK naming convention but NO
%%       @ManyToOne/@JoinColumn mapping in the Java source. Relationships marked "(mapped)" are real @ManyToOne.

erDiagram
    direction LR

%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#ffffff", "primaryBorderColor": "#000000", "primaryTextColor": "#000000", "lineColor": "#000000", "secondaryColor": "#ffffff", "tertiaryColor": "#ffffff"}, "er": {"diagramPadding": 8, "entityPadding": 12, "minEntityWidth": 90, "minEntityHeight": 40, "fontSize": 22}}}%%
    PmChangeRequest {
        UUID id
        string cr_code
        string target_type
        uuid target_id
        string title
        text description
        string change_reason
        string requester_id
        uuid project_id
        string assignee_id
        string status
        string priority
        string target_version
        string approved_by
        datetime approved_at
        datetime implemented_at
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    PmChangeImpact {
        UUID id
        uuid change_request_id
        string impacted_type
        uuid impacted_id
        string impacted_title
        string impact_level
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    ChangeImpactAnalysis {
        UUID id
        uuid change_request_id
        text dfd_impact
        text er_impact
        text ui_impact
        text api_impact
        text test_impact
        int manday_impact
        int timeline_impact
        text cost_impact
        uuid_array impacted_requirement_ids
        uuid_array impacted_spec_ids
        uuid_array impacted_task_ids
        uuid_array impacted_test_case_ids
        uuid_array impacted_bug_ids
        uuid_array impacted_diagram_ids
        text_array impacted_table_names
        string analysis_status
        datetime analyzed_at
        string analyzed_by
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    PmDesignReview {
        UUID id
        UUID business_id
        string review_code
        string title
        text description
        uuid project_id
        string review_item_type
        uuid review_item_id
        string reviewer
        string assigned_to
        string severity
        string status
        date due_date
        text figma_url
        string embed_mode
        boolean is_active
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    PmReviewComment {
        UUID id
        UUID business_id
        uuid review_id
        string comment_type
        text comment_text
        string severity
        string assigned_to
        string status
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    PmCrAssignee {
        UUID id
        uuid change_request_id
        string user_id
        string target_type
        uuid target_id
        string status
        datetime completed_at
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    PmEditSession {
        UUID id
        uuid change_request_id
        string target_type
        uuid target_id
        string assignee_id
        datetime granted_at
        datetime expires_at
        boolean is_active
        string edit_type
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    PmChangeRequest ||--o{ PmChangeImpact : "has impacts"
    PmChangeRequest ||--o{ ChangeImpactAnalysis : "has analysis"
    PmChangeRequest ||--o{ PmCrAssignee : "has assignees"
    PmChangeRequest ||--o{ PmEditSession : "grants edit sessions (inferred)"

    PmDesignReview ||--o{ PmReviewComment : "has comments"
